--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -37,6 +37,6 @@ jobs:
         run: terraform apply -auto-approve
 
     env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      ARM_CLIENT_ID: ${{ secrets.TF_API_CLIENT_ID }}
+      ARM_TENANT_ID: ${{ secrets.TF_API_TENANT_ID }}
       ARM_USE_OIDC: true
