--- a/.github/workflows/check-drift.yml
+++ b/.github/workflows/check-drift.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
+      - name: Inject Terraform Cloud Token
+        run: |
+          mkdir -p ~/.terraform.d
+          echo "{\"credentials\": {\"app.terraform.io\": {\"token\": \"${TERRAFORM_CLOUD_TOKEN}\"}}}" > ~/.terraform.d/credentials.tfrc.json
       - name: Terraform Init
         run: terraform init
 
@@ -32,3 +36,4 @@ jobs:
 
       - name: Terraform Plan (Check Drift)
         run: terraform plan -no-color
+
